Liceo Scientifico 4/Informatica Liceo/Java/Compiti estate/Da libro di testo/Capitolo 3/Problema 6/Errore.txt
Test.java:6: error: incompatible types: possible lossy conversion from int to byte
                lunghezza = 140;
                            ^
1 error